T145: implemented taxes editor
Summary: T145

Test Plan: ..

Reviewers: catalin.dobre, dragos.pricope

Subscribers: ionut.paraschiv

Differential Revision: https://phabricator.3angletech.com/D73

--- a/assets/client/src/pages/internal/containers/wizard/main/template/main-wizard-component.html
+++ b/assets/client/src/pages/internal/containers/wizard/main/template/main-wizard-component.html
@@ -1,20 +1,16 @@
-<body class="nav-md">
-	<header>
-		<wizard-header-component></wizard-header-component>
-	</header>
-
-
-	<div class="container body">
-		<div class="row main-row">
-			<div class="col-md-2 left_col">
-				<wizard-navbar-component></wizard-navbar-component>
-			</div>
-			<div class="right_col main-content" role="main">
-				<router-outlet></router-outlet>
-				<div class="row">
-					<wizard-steps-component></wizard-steps-component>
-				</div>
+<header>
+	<wizard-header-component></wizard-header-component>
+</header>
+<div class="container body">
+	<div class="row main-row">
+		<div class="col-md-2 left_col">
+			<wizard-navbar-component></wizard-navbar-component>
+		</div>
+		<div class="right_col main-content" role="main">
+			<router-outlet></router-outlet>
+			<div class="row bottom-row">
+				<wizard-steps-component></wizard-steps-component>
 			</div>
 		</div>
-	</div>	
-</body>
+	</div>
+</div>
