--- a/assets/client/src/pages/internal/containers/wizard/pages/utils/header/template/wizard-header-component.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/utils/header/template/wizard-header-component.html
@@ -1,9 +1,8 @@
+<!-- logo area -->
 <div class="row">
-	<!-- logo area -->
 	<div class="col-xs-2 col-md-2 text-center">
 		<img src="/client/static-assets/images/unit_pal_logo.png" class="singup_logo center-block" alt="" />
 	</div>
-
 	<div class="col-xs-12 col-md-10">
 		<!-- top navigation -->
 		<div class="row">
@@ -20,7 +19,7 @@
 							<li>
 								<a>{{ 'Help' | translate }}</a>
 							</li>
-							<li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> {{ 'Log Out' | translate }}</a>
+							<li><a><i class="fa fa-sign-out pull-right"></i> {{ 'Log Out' | translate }}</a>
 							</li>
 						</ul>
 					</li>
