integrated last design changes

--- a/assets/client/src/pages/internal/containers/wizard/main/template/main-wizard-component.html
+++ b/assets/client/src/pages/internal/containers/wizard/main/template/main-wizard-component.html
@@ -6,7 +6,7 @@
 		<div class="col-md-2 left_col">
 			<wizard-navbar-component></wizard-navbar-component>
 		</div>
-		<div class="right_col main-content" role="main">
+		<div class="right_col main-content signup-step" role="main">
 			<router-outlet></router-outlet>
 			<div class="row bottom-row">
 				<wizard-steps-component></wizard-steps-component>
