add on products (+ pagination): partial work

--- a/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/add-on-products/template/wizard-add-on-products.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/wizard-pages/add-on-products/template/wizard-add-on-products.html
@@ -1,1 +1,16 @@
-<h1>Add On Products</h1>
+<div class="signup-step-05">
+	<div class="row page-title">
+		<div class="col-sm-4">
+			<h1>{{ 'Add-On Products' | translate }} &gt; <small>{{ 'Overview' | translate }}</small></h1>
+		</div>
+		<div class="col-sm-6 description">
+			<small>{{ '[Wizard Step 4] Add-On Products text' | translate }}</small>
+		</div>
+		<div class="col-sm-2 text-right">
+			<h1>5 <i class="fa fa-puzzle-piece"></i></h1>
+		</div>
+	</div>
+</div>
+<div class="row x_panel">
+	<add-on-products></add-on-products>
+</div>
