generic table with lazy loading
Summary: T148

Test Plan: ..

Reviewers: catalin.dobre, dragos.pricope

Subscribers: ionut.paraschiv

Differential Revision: https://phabricator.3angletech.com/D74

--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
@@ -1,1 +1,13 @@
-<p>DA!</p>
+<div class="col-md-9 overview-left">
+	<lazy-loading-table 
+		[isCollapsed]="isCollapsed" 
+		(onAdd)="addAddOnProduct()"
+		(onCopy)="copyAddOnProduct($event)"
+		(onDelete)="deleteAddOnProduct($event)"
+		(onSelect)="selectAddOnProduct($event)"
+		(onEdit)="editAddOnProduct($event)"
+		>
+	</lazy-loading-table>
+</div>
+<div class="col-md-3 overview-right hidden-xs hidden-sm">
+</div>
