--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -72,7 +72,7 @@
 		</tbody>
 	</table>
 	<div class="row table-foot">
-		<div [ngClass]="{'col-sm-4': !isCollapsed, 'col-md-6': isCollapsed}">
+		<div class="col-sm-4" *ngIf="!isCollapsed">
 			<a class="btn btn-lg" *ngIf="canAdd" (click)="addItem()">
 				<i class="fa fa-plus"></i> {{tableMeta.addButtonText}}
 			</a>
@@ -80,22 +80,31 @@
 		<div class="col-sm-4" *ngIf="!isCollapsed">
 			<div class="dataTables_info" id="example_info" role="status" aria-live="polite">{{pageNumberStat}}</div>
 		</div>
-		<div class="text-right"  [ngClass]="{'col-sm-4': !isCollapsed, 'col-md-6': isCollapsed}">
-			<ul class="pagination">
-				<li [ngClass]="{disabled: isFirstPage()}">
-					<a (click)="updatePageNumber(firstPageNumber)">
-						<i class="fa fa-angle-double-left"></i>
-					</a>
-				</li>
-				<li *ngFor="#paginationIndex of paginationIndexList" [ngClass]="{active: paginationIndex.isSelected}">
-					<a (click)="updatePageNumber(paginationIndex.pageNumber)">{{paginationIndex.displayNumber}}</a>
-				</li>
-				<li [ngClass]="{disabled: isLastPage()}">
-					<a (click)="updatePageNumber(lastPageNumber)">
-						<i class="fa fa-angle-double-right"></i>
-					</a>
-				</li>
-			</ul>
+		<div class="text-right"  [ngClass]="{'col-sm-4': !isCollapsed, 'col-sm-12': isCollapsed}">
+			<center>
+				<ul class="pagination">
+					<li [ngClass]="{disabled: isFirstPage()}">
+						<a (click)="updatePageNumber(firstPageNumber)">
+							<i class="fa fa-angle-double-left"></i>
+						</a>
+					</li>
+					<li *ngFor="#paginationIndex of paginationIndexList" [ngClass]="{active: paginationIndex.isSelected}">
+						<a (click)="updatePageNumber(paginationIndex.pageNumber)">{{paginationIndex.displayNumber}}</a>
+					</li>
+					<li [ngClass]="{disabled: isLastPage()}">
+						<a (click)="updatePageNumber(lastPageNumber)">
+							<i class="fa fa-angle-double-right"></i>
+						</a>
+					</li>
+				</ul>
+			</center>
+		</div>
+		<div class="col-sm-12" *ngIf="isCollapsed">
+			<center>
+				<a class="btn btn-lg" *ngIf="canAdd" (click)="addItem()">
+					<i class="fa fa-plus"></i> {{tableMeta.addButtonText}}
+				</a>
+			</center>
 		</div>
 	</div>
 </div>
