--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -151,8 +151,9 @@ table .buttons, table button, table .btn { margin:0px; }
 
 .overview-right { border-left: 1px solid #ccc; padding:0 24px; }
 .overview-left .table p { margin:0px; }
-.singleview-right { border-left: 1px solid #ccc; padding:0 24px; }
+.singleview-right { border-left: 1px solid #ccc; padding:24px; }
 .singleview-left .pagination { margin:0px; }
+.singleview .pagination { margin:0px; }
 .singleview .x_panel { padding:0px; margin:0px; }
 #singleview-search-input input { border:0px; padding:12px !important; margin:0px; padding:0px;   }
 #singleview-search-input input:focus { border:0px !important; background:#eee; }
@@ -168,6 +169,10 @@ table .buttons, table button, table .btn { margin:0px; }
 
 .signup-table td { padding:12px !important; } 
 
+.save-cancel { padding-bottom:12px; margin-bottom:12px; border-bottom:1px solid #ccc; }
+.file-upload { width:100%; }
+
+label small { font-weight:normal; }
 
 .vertical-alignment-helper {
     display:table;
@@ -195,3 +200,22 @@ input[type="number"].form-control {
 }
 
 /* End Fixes Section */
+
+/* Bootstrap overrides */
+.btn-primary,
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:visited,
+.btn-primary:focus {
+    background-color:rgba(255, 132, 50, 1.0) !important;
+    border-color: rgba(255, 132, 50, 1.0) !important;
+}
+.btn-danger,
+.btn-danger:hover,
+.btn-danger:active,
+.btn-danger:visited,
+.btn-danger:focus {
+    background-color:rgba(54, 206, 141, 1.0) !important;
+    border-color: rgba(54, 206, 141, 1.0) !important;
+}
+/* End Bootstrap overrides */
