--- a/assets/client/src/pages/internal/containers/wizard/pages/utils/wizard-steps/template/wizard-steps-component.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/utils/wizard-steps/template/wizard-steps-component.html
@@ -1,6 +1,6 @@
 <div class="col-xs-8 form-group">
 </div>
-<div class="col-xs-4 text-right">
+<div class="col-xs-4 text-right" *ngIf="wizardButtonsVisible">
 	<a class="signup-skip" *ngIf="canSkip()" (click)="handleSkipPressed()">
 		{{ 'Skip this step' | translate }}
 	</a>
