--- a/assets/client/src/pages/internal/containers/wizard/pages/utils/wizard-steps/template/wizard-steps-component.html
+++ b/assets/client/src/pages/internal/containers/wizard/pages/utils/wizard-steps/template/wizard-steps-component.html
@@ -1,18 +1,20 @@
-<div class="col-xs-8 form-group">
+<div class="col-xs-8">
 </div>
-<div class="col-xs-4 text-right" *ngIf="wizardButtonsVisible">
-	<a class="signup-skip" *ngIf="canSkip()" (click)="handleSkipPressed()">
+<div class="col-xs-4" *ngIf="wizardButtonsVisible">
+	<div class="text-right">
+		<a class="signup-skip" *ngIf="canSkip()" (click)="handleSkipPressed()">
 		{{ 'Skip this step' | translate }}
-	</a>
-	<a class="btn btn-app" role="button" *ngIf="hasPrevious()" (click)="handlePreviousPressed()">
-		<i class="fa fa-angle-left"></i>
-	</a>
-	<a class="btn btn-app" role="button" *ngIf="hasNext()" (click)="handleNextPressed()">
-		<i *ngIf="isMovingNext" class="fa fa-spinner fa-pulse"></i>
-		<i *ngIf="!isMovingNext" class="fa fa-angle-right"></i> 
-	</a>
-	<a class="btn btn-app" role="button" *ngIf="!hasNext()" (click)="handleNextPressed()">
-		<i *ngIf="isMovingNext" class="fa fa-spinner fa-pulse"></i>
-		<i *ngIf="!isMovingNext" class="fa fa-angle-double-right"></i> 
-	</a>
+		</a>
+		<a class="btn btn-app" role="button" *ngIf="hasPrevious()" (click)="handlePreviousPressed()">
+			<i class="fa fa-angle-left"></i>
+		</a>
+		<a class="btn btn-app" role="button" *ngIf="hasNext()" (click)="handleNextPressed()">
+			<i *ngIf="isMovingNext" class="fa fa-spinner fa-pulse"></i>
+			<i *ngIf="!isMovingNext" class="fa fa-angle-right"></i>
+		</a>
+		<a class="btn btn-app" role="button" *ngIf="!hasNext()" (click)="handleNextPressed()">
+			<i *ngIf="isMovingNext" class="fa fa-spinner fa-pulse"></i>
+			<i *ngIf="!isMovingNext" class="fa fa-angle-double-right"></i>
+		</a>
+	</div>
 </div>
