--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/pages/add-on-product-edit/template/add-on-product-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/pages/add-on-product-edit/template/add-on-product-edit.html
@@ -65,14 +65,17 @@
 		<div class="col-xs-8">
 		</div>
 		<div class="col-xs-4">
-			<button type="button" class="btn btn-primary btn-block" (click)="saveAddOnProduct()">Save Changes</button>
+			<button type="button" class="btn btn-primary btn-block" (click)="saveAddOnProduct()">
+				<i *ngIf="isSavingAddOnProduct" class="fa fa-spinner fa-pulse"></i>
+				{{ 'Save Changes' | translate }}
+			</button>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-8">
 		</div>
 		<div class="col-xs-4">
-			<button type="button" class="btn btn-danger btn-block" (click)="showViewScreen()">Cancel</button>
+			<button type="button" class="btn btn-danger btn-block" (click)="showViewScreen()">{{ 'Cancel' | translate }}</button>
 		</div>
 	</div>
 </div>
