small bugfix in lazy loading table

--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -39,7 +39,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr *ngIf="!noResultsExist" *ngFor="#item of itemList" [ngClass]="{active: (isSelected(item) && tableOptions.canSelect)}">
+			<tr *ngFor="#item of itemList" [ngClass]="{active: (isSelected(item) && tableOptions.canSelect)}">
 				<td *ngFor="#columnMeta of columnMetaList" (click)="tableOptions.canSelect && didSelectItem(item)">
 					<span *ngIf="isPercentage(columnMeta.valueMeta)">
 						{{ getItemValue(item, columnMeta.valueMeta) | percentage }}
@@ -64,7 +64,7 @@
 					</a>
 				</td>
 			</tr>
-			<tr *ngIf="noResultsExist">
+			<tr *ngIf="noResultsExist()">
 				<td [attr.colspan]="columnMetaList.length + 1">
 					<center>
 						{{ 'No items to display' | translate }}
