img-responsive bug

--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -256,3 +256,7 @@ input[type="number"].form-control {
 .grid-btn {
     margin: 2px !important;
 }
+/* Bootstrap img-responsive bug on Firefox */
+.img-responsive {
+	width: 100%;
+}
