--- a/assets/client/src/pages/internal/containers/wizard/main/template/main-wizard-component.html
+++ b/assets/client/src/pages/internal/containers/wizard/main/template/main-wizard-component.html
@@ -8,6 +8,7 @@
 		</div>
 		<div class="right_col main-content signup-step" role="main">
 			<router-outlet></router-outlet>
+            <!--<div class="clearfix"></div>-->
 			<div class="row bottom-row">
 				<wizard-steps-component></wizard-steps-component>
 			</div>
